--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,69 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
 
-:root{
+:root {
     --color-primary: #4502C7;
     --color-text-2: #25282B
 }
 
-*{
+* {
     box-sizing: border-box;
     font-family: "Lexend Deca", sans-serif;
 }
 
-body{
+body {
     background-color: #F8F8F8;
     margin: 0;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
 /* Container */
-.container{
+.container {
     width: 1184px;
     margin: 0 auto;
 }
 
-@media(max-width: 1199.98px){
-    .container{
+@media(max-width: 1199.98px) {
+    .container {
         width: 960px;
     }
 }
 
-@media (max-width: 991.98px){
-    .container{
+@media (max-width: 991.98px) {
+    .container {
         width: 720px;
     }
 }
 
-@media (max-width: 767.98px){
-    .container{
+@media (max-width: 767.98px) {
+    .container {
         width: 540px;
     }
 }
 
-@media (max-width: 575.98px){
-    .container{
+@media (max-width: 575.98px) {
+    .container {
         width: 100%;
         padding: 0 16px;
     }
 }
+
 /* End-Container */
 
 /* Top-Header */
-.top-header{
+.top-header {
     background-color: var(--color-primary);
     padding: 10px 0;
 }
 
-.top-header .inner-wrap{
+.top-header .inner-wrap {
     display: flex;
     justify-content: flex-end;
     gap: 40px;
 }
 
-.top-header .inner-item{
+.top-header .inner-item {
     color: #FFF;
     font-weight: 400;
     font-size: 14px;
@@ -72,35 +73,36 @@ a{
     align-items: center;
 }
 
-.top-header .inner.item i{
+.top-header .inner.item i {
     font-size: 20px;
 }
 
-@media (max-width: 767.98px){
-    .top-header{
+@media (max-width: 767.98px) {
+    .top-header {
         display: none;
     }
 }
+
 /* End-Top-Header */
 
 /* Header */
-.header{
+.header {
     padding: 12px 0;
     background-color: #FFF;
 }
 
-.header .inner-wrap{
+.header .inner-wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.header .inner-logo img{
+.header .inner-logo img {
     width: auto;
     height: 50px;
 }
 
-.header .inner-menu > ul{
+.header .inner-menu>ul {
     display: inline-flex;
     list-style: none;
     padding: 0;
@@ -109,22 +111,23 @@ a{
     cursor: pointer;
 }
 
-.header .inner-menu > ul > li{
+.header .inner-menu>ul>li {
     position: relative;
 }
 
-.header .inner-menu > ul > li > a{
+.header .inner-menu>ul>li>a {
     font-size: 16px;
     font-weight: 500;
     color: var(--color-text-2);
     text-transform: capitalize;
 }
-.header .inner-menu > ul > li > a.active, 
-.header .inner-menu > ul > li > a:hover{
+
+.header .inner-menu>ul>li>a.active,
+.header .inner-menu>ul>li>a:hover {
     color: var(--color-primary);
 }
 
-.header .inner-menu > ul > li > ul{
+.header .inner-menu>ul>li>ul {
     position: absolute;
     list-style: none;
     padding: 8px 0;
@@ -138,35 +141,36 @@ a{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     display: none;
 }
-.header .inner-menu > ul > li:hover > ul{
+
+.header .inner-menu>ul>li:hover>ul {
     display: block;
 }
 
-.header .inner-menu > ul > li > ul a{
+.header .inner-menu>ul>li>ul a {
     display: block;
     padding: 8px 22px;
     font-weight: 400;
     font-size: 16px;
     color: var(--color-primary);
-    
+
 }
 
-.header .inner-menu > ul > li > ul a:hover{
+.header .inner-menu>ul>li>ul a:hover {
     background-color: #4502C7;
     color: #FFF;
 }
 
-.header .inner-cart a{
+.header .inner-cart a {
     display: inline-flex;
     align-items: center;
 }
 
-.header .inner-cart a img{
+.header .inner-cart a img {
     width: auto;
     height: 26px;
 }
 
-.header .inner-cart a span{
+.header .inner-cart a span {
     width: auto;
     background-color: #FF3904;
     border-radius: 3px;
@@ -179,20 +183,20 @@ a{
     margin-left: 4px;
 }
 
-.header .inner-cart span::before{
+.header .inner-cart span::before {
     content: "";
-    display:inline-block;
-    width: 0; 
-    height: 0; 
+    display: inline-block;
+    width: 0;
+    height: 0;
     border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent; 
+    border-bottom: 3px solid transparent;
     border-right: 3.7px solid #FF3904;
     position: absolute;
     left: -3.6px;
     top: 4.5px;
 }
 
-.header .inner-menu-mobile{
+.header .inner-menu-mobile {
     display: none;
     background-color: #FFF;
     border: 0;
@@ -202,39 +206,44 @@ a{
     color: #25282B;
 }
 
-@media (max-width: 1199.98px){
-    .header .inner-menu > ul{
+@media (max-width: 1199.98px) {
+    .header .inner-menu>ul {
         gap: 24px;
         cursor: pointer;
     }
-    .header .inner-menu > ul > li > a {
+
+    .header .inner-menu>ul>li>a {
         font-size: 15px;
     }
 }
-@media (max-width: 991.98px){
-    .header .inner-menu{
+
+@media (max-width: 991.98px) {
+    .header .inner-menu {
         display: none;
     }
-    .header .inner-menu-mobile{
+
+    .header .inner-menu-mobile {
         display: inline-block;
     }
 }
-@media (max-width: 767.98px){
 
-}
-@media (max-width: 575.98px){
-    .header{
+@media (max-width: 767.98px) {}
+
+@media (max-width: 575.98px) {
+    .header {
         padding: 15px 0;
     }
+
     .header .inner-logo img {
         width: auto;
         height: 40px;
     }
 }
+
 /* End-Header */
 
 /* Section-1 */
-.section-1{
+.section-1 {
     padding: 106px 0 108px 0;
     background-image: url(../images/background-1.jpg);
     background-size: cover;
@@ -242,12 +251,12 @@ a{
     background-position: center;
 }
 
-.section-1 .inner-wrap{
+.section-1 .inner-wrap {
     width: 768px;
     margin: 0 auto;
 }
 
-.section-1 .inner-title{
+.section-1 .inner-title {
     text-align: center;
     color: var(--color-primary);
     font-size: 36px;
@@ -256,7 +265,7 @@ a{
     margin: 0 0 20px 0;
 }
 
-.section-1 .inner-desc{
+.section-1 .inner-desc {
     text-align: center;
     color: #25282B;
     font-size: 16px;
@@ -265,7 +274,7 @@ a{
     margin-bottom: 30px;
 }
 
-.section-1 .inner-form{
+.section-1 .inner-form {
     background-color: #00000066;
     border-radius: 10px;
     padding: 40px;
@@ -274,15 +283,16 @@ a{
     gap: 22.5px
 }
 
-.section-1 .inner-address{
+.section-1 .inner-address {
     width: 100%;
 }
 
-.section-1 .inner-user, .section-1 .inner-calendar{
+.section-1 .inner-user,
+.section-1 .inner-calendar {
     width: 37.5%;
 }
 
-.section-1 .inner-form .inner-button{
+.section-1 .inner-form .inner-button {
     flex: 1;
     color: #FFF;
     background-color: var(--color-primary);
@@ -297,11 +307,11 @@ a{
     border: none;
 }
 
-.section-1 .inner-form .inner-button i{
+.section-1 .inner-form .inner-button i {
     font-size: 20px;
 }
 
-.section-1 .inner-form .inner-input-group{
+.section-1 .inner-form .inner-input-group {
     background-color: #FFF;
     border-radius: 10px;
     padding: 18px 12px;
@@ -309,13 +319,13 @@ a{
     align-items: center;
 }
 
-.section-1 .inner-form .inner-input-group .inner-icon{
+.section-1 .inner-form .inner-input-group .inner-icon {
     height: 20px;
     width: auto;
     margin-right: 14px;
 }
 
-.section-1 .inner-form .inner-input-group .inner-input{
+.section-1 .inner-form .inner-input-group .inner-input {
     flex: 1;
     outline: none;
     border: none;
@@ -324,91 +334,354 @@ a{
     letter-spacing: 0.6px;
 }
 
-.section-1 .inner-form .inner-input-group .inner-input::placeholder{
-   color: #A6A6A6;
+.section-1 .inner-form .inner-input-group .inner-input::placeholder {
+    color: #A6A6A6;
 }
 
-.section-1 .inner-form .inner-down{
+.section-1 .inner-form .inner-down {
     font-size: 11px;
     color: #4502C7;
 }
 
-@media (max-width: 991.98px){
+@media (max-width: 991.98px) {
     .section-1 .inner-wrap {
         width: 100%;
     }
+
     .section-1 .inner-title {
         font-size: 30px;
     }
+
     .section-1 .inner-desc {
         font-size: 14px;
     }
+
     .section-1 .inner-form {
         padding: 18px;
         gap: 15px;
     }
 }
-@media (max-width: 767.98px){
+
+@media (max-width: 767.98px) {
     .section-1 {
         padding: 106px 0 106px 0;
     }
+
     .section-1 .inner-title {
         font-size: 27px;
     }
+
     .section-1 .inner-form {
         padding: 15px;
         gap: 12px;
     }
-    .section-1 .inner-user, .section-1 .inner-calendar {
+
+    .section-1 .inner-user,
+    .section-1 .inner-calendar {
         width: 100%;
     }
+
     .section-1 .inner-form .inner-button {
         height: 58px;
     }
 }
 
-@media (max-width: 575.98px){
+@media (max-width: 575.98px) {
     .section-1 {
         padding: 106px 0 106px 0;
     }
+
     .section-1 .inner-title {
         font-size: 27px;
     }
+
     .section-1 .inner-desc {
         font-size: 14px;
     }
+
     .section-1 .inner-form {
         padding: 15px;
         gap: 12px;
     }
-    .section-1 .inner-user, .section-1 .inner-calendar {
+
+    .section-1 .inner-user,
+    .section-1 .inner-calendar {
         width: 100%;
     }
+
     .section-1 .inner-form .inner-button {
         height: 58px;
     }
 }
 
-@media (max-width: 375.98px){
+@media (max-width: 375.98px) {
     .section-1 {
         padding: 106px 0 106px 0;
     }
+
     .section-1 .inner-title {
         font-size: 25px;
     }
+
     .section-1 .inner-desc {
         font-size: 13px;
     }
+
     .section-1 .inner-form {
         padding: 15px;
         gap: 12px;
     }
-    .section-1 .inner-user, .section-1 .inner-calendar {
+
+    .section-1 .inner-user,
+    .section-1 .inner-calendar {
         width: 100%;
     }
+
     .section-1 .inner-form .inner-button {
         height: 58px;
     }
 }
 
 /* End-Section-1 */
+
+/* Section-2 */
+
+.section-2 {
+    padding: 60px 0;
+}
+
+.section-2 .inner-wrap {
+    background-color: var(--color-primary);
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: 10px;
+    padding: 32px 27px 32px 23px;
+    display: flex;
+    gap: 32px;
+}
+
+.section-2 .inner-info {
+    width: calc(25% - 32px);
+    text-align: center;
+}
+
+.section-2 .inner-info .inner-title {
+    color: #FFF;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 150%;
+    margin-top: 24px;
+    margin-bottom: 10px;
+}
+
+.section-2 .inner-info .inner-desc {
+    color: #FFF;
+    font-size: 11.5px;
+    font-weight: 400;
+    margin-bottom: 36px;
+    line-height: 11px;
+}
+
+.section-2 .inner-info .inner-clock-title {
+    font-size: 21px;
+    color: #FFF;
+    font-weight: 700;
+    line-height: 100%;
+    margin-bottom: 17px;
+}
+
+.section-2 .inner-info .inner-clock-number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 17px;
+    margin-bottom: 47px;
+}
+
+.section-2 .inner-info .inner-clock-number span {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFF;
+    width: 57px;
+    height: 57px;
+    font-size: 30px;
+    font-weight: 700;
+    color: #4502C7;
+    border-radius: 10px;
+}
+
+.section-2 .inner-info .inner-discount-title {
+    font-size: 16px;
+    font-weight: 700;
+    color: #FFF;
+}
+
+.section-2 .inner-info .inner-discount-price {
+    font-size: 40px;
+    font-weight: 700;
+    color: #FFD63A;
+}
+
+.section-2 .inner-info .inner-discount-price .inner-unit {
+    text-decoration: underline;
+}
+
+.section-2 .inner-list {
+    width: 75%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+/*End-Section-2 */
+
+/* Product-Item */
+
+.product-item {
+    background-color: #FFF;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 2.38px 2.38px 0px #00000040;
+}
+
+.product-item .inner-image {
+    aspect-ratio: 271/237;
+    border-radius: 10px;
+    margin-bottom: -18px;
+}
+
+.product-item .inner-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product-item .inner-discount {
+    display: inline-flex;
+    border-radius: 0 32px 32px 0;
+    background-color: #DA0808;
+    align-items: center;
+    justify-content: center;
+    padding: 4px 10px 4px 5px;
+    color: #FFF;
+    gap: 6px;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 15.45px;
+    text-transform: uppercase;
+}
+
+.product-item .inner-discount i {
+    color: #F2C94C;
+}
+
+.product-item .inner-content {
+    padding: 15px;
+}
+
+.product-item .inner-content .inner-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 125%;
+    margin-top: 0;
+    margin-bottom: 6px;
+    height: 35px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* Thuộc tính này để thêm dấu "..." ở sau đoạn văn khi đoạn văn dài và được ẩn đi */
+    /* -webkit-line-clamp: 2; */
+}
+
+.product-item .inner-content .inner-title a {
+    color: #25282B;
+}
+
+.product-item .inner-content .inner-title a:hover {
+    color: var(--color-primary);
+}
+
+.product-item .inner-content .inner-prices {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px 11.5px;
+    margin-bottom: 6px;
+}
+
+.product-item .inner-content .inner-price-old{
+    font-size: 15px;
+    font-weight: 600;
+    color: #52575C;
+    text-decoration: line-through;
+}
+
+.product-item .inner-content .inner-price-new{
+    font-size: 15px;
+    font-weight: 700;
+    color: #DA0808;
+}
+
+.product-item .inner-content .inner-prices .inner-unit{
+    text-decoration: underline;
+}
+
+.product-item .inner-content .inner-desc{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.product-item .inner-content .inner-desc-tour{
+    font-size: 11px;
+    font-weight: 400;
+    color: #8C8C8C;
+}
+
+.product-item .inner-content .inner-meta{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product-item .inner-content .inner-rating{
+    display: inline-flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.product-item .inner-content .inner-rating .inner-stars{
+    font-size: 12.5px;
+    color: #FFD600;
+}
+
+.product-item .inner-content .inner-rating{
+    font-size: 11px;
+    font-weight: 400;
+    color: #8C8C8C;
+}
+.product-item .inner-content .inner-stock{
+    display: inline-flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.product-item .inner-content .inner-stock .inner-label{
+    font-size: 11px;
+    font-weight: 700;
+}
+
+.product-item .inner-content .inner-stock .inner-number{
+    font-size: 14px;
+    font-weight: 700;
+    color: #FFF;
+    background-color: #DA0808;
+    padding: 7px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Product-Item */
