--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,8 @@ a {
     font-size: 14px;
     display: inline-flex;
     gap: 8px;
-    align-items: center;
+    align-items: center; 
+    cursor: pointer;
 }
 
 .top-header .inner.item i {
@@ -533,6 +534,62 @@ a {
     gap: 20px;
 }
 
+@media (max-width: 1199.98px){
+    .section-2 .inner-info {
+        width: calc(32% - 32px);
+    }
+    .section-2 .inner-list {
+        width: 68%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .section-2 .product-item:nth-child(3) {
+        display: none;
+    }
+}
+@media (max-width: 991.98px){
+    .section-2 .inner-info {
+        width: calc(50% - 32px);
+    }
+    .section-2 .inner-list {
+        width: 50%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .section-2 .product-item:nth-child(2) {
+        display: none;
+    }
+
+}
+@media (max-width: 767.98px){
+    .section-2 .inner-wrap {
+        flex-wrap: wrap;
+        gap: 32px;
+    }
+    .section-2 .inner-info {
+        width: 100%;
+    }
+    .section-2 .inner-list {
+        width: 100%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .section-2 .product-item:nth-child(2) {
+        display: none;
+    }
+}
+@media (max-width: 575.98px){
+    .section-2{
+        padding: 45px 0;
+    }
+    .section-2 .inner-wrap {
+        padding: 30px 15px;
+    }
+    .section-2 .inner-info .inner-title {
+        margin-top: 0;
+    }
+    .section-2 .product-item .inner-content .inner-desc-tour {
+        font-size: 11px;
+    }
+}
+
 /*End-Section-2 */
 
 /* Product-Item */
@@ -590,7 +647,7 @@ a {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     /* Thuộc tính này để thêm dấu "..." ở sau đoạn văn khi đoạn văn dài và được ẩn đi */
-    /* -webkit-line-clamp: 2; */
+    -webkit-line-clamp: 2;
 }
 
 .product-item .inner-content .inner-title a {
@@ -684,4 +741,163 @@ a {
     justify-content: center;
 }
 
+@media (max-width: 575.98px){
+    .product-item .inner-content{
+        padding: 10px;
+    }
+    .product-item .inner-content .inner-price-old {
+        font-size: 14px;
+    }
+    .product-item .inner-content .inner-price-new {
+        font-size: 14px;
+    }
+    .product-item .inner-content .inner-desc-tour {
+        font-size: 10px;
+    }
+    .product-item .inner-content .inner-meta{
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 374.98px){
+    .product-item .inner-content .inner-stock{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
 /* Product-Item */
+
+/* Box-title */
+
+.box-title{
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 36px;
+    font-weight: 700;
+    color: var(--color-primary);
+    text-align: center;
+}
+
+@media (max-width: 991.98px) {
+    .box-title{
+        margin-bottom: 25px;
+        font-size: 24px;
+    } 
+}
+
+/* Box-title */
+
+/* Section-3 */
+.section-3{
+    padding-bottom: 60px;
+}
+
+.section-3 .inner-wrap{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.section-3 .inner-item{
+    border-radius: 10px;
+    overflow: hidden;
+    aspect-ratio: 382/269;
+}
+
+.section-3 .inner-item img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+@media (max-width: 1199.98px){
+    .section-3 .inner-wrap{
+        width: 100%;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .section-3 .inner-wrap{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 767.98px) {
+    .section-3{
+        padding-bottom: 45px;
+    }
+    .section-3 .inner-wrap{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+/* End-Section-3 */
+
+/* Section-4 */
+
+.section-4{
+    padding-bottom: 60px;
+}
+
+.section-4 .inner-wrap{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.section-4 .inner-button{
+    margin-top: 35px;
+    text-align: center;
+}
+
+@media (max-width: 1199.98px){
+    .section-4 .inner-wrap{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (max-width: 991.98px){
+    .section-4 .inner-wrap{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 575.98px){
+    .section-4 {
+        padding-bottom: 45px;
+    }
+    .section-4 .inner-wrap{
+        gap: 10px;
+    }
+    .section-4 .inner-button{
+        margin-top: 25px;
+    }
+    .section-4 .button-ouline{
+        padding: 10px 22px;
+        font-size: 14px;
+    }
+}
+
+/*End-Section-4 */
+
+/* button */
+.button-ouline{
+    display: inline-block;
+    border: 2px solid var(--color-primary);
+    border-radius: 6.5px;
+    background-color: #FFF;
+    padding: 12px 25px;
+    font-weight: 500;
+    font-size: 16px;
+    color: var(--color-primary);
+    transition: all 0.3s ease-out;
+}
+
+.button-ouline:hover{
+    background-color: var(--color-primary);
+    color: #FFF;
+    transition: all 0.3s ease-out;
+}
+/* button */
+
+/*  */
