--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ a {
     text-decoration: none;
 }
 
+img{
+    display: block;
+}
+
 /* Container */
 .container {
     width: 1184px;
@@ -306,6 +310,14 @@ a {
     font-size: 14px;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.section-1 .inner-form .inner-button:hover{
+    color: var(--color-primary);
+    background-color: #FFF;
+    transition: all 0.3s ease-in-out;
 }
 
 .section-1 .inner-form .inner-button i {
@@ -647,7 +659,7 @@ a {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     /* Thuộc tính này để thêm dấu "..." ở sau đoạn văn khi đoạn văn dài và được ẩn đi */
-    -webkit-line-clamp: 2;
+    /* -webkit-line-clamp: 2; */
 }
 
 .product-item .inner-content .inner-title a {
@@ -835,7 +847,6 @@ a {
 /* End-Section-3 */
 
 /* Section-4 */
-
 .section-4{
     padding-bottom: 60px;
 }
@@ -877,7 +888,6 @@ a {
         font-size: 14px;
     }
 }
-
 /*End-Section-4 */
 
 /* button */
@@ -900,4 +910,237 @@ a {
 }
 /* button */
 
-/*  */
+/* Section-5 */
+
+.section-5{
+    padding-bottom: 60px;
+}
+
+.section-5 .inner-image{
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.section-5 .inner-image img{
+    height: auto;
+    width: 100%;
+}
+
+@media (max-width: 767.98px){
+    .section-5{
+        padding-bottom: 45px;
+    }
+}
+/* Section-5 */
+
+/* Section-6 */
+.section-6{
+    padding-bottom: 60px;
+}
+
+.section-6 .inner-wrap{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.section-6 .inner-button{
+    margin-top: 35px;
+    text-align: center;
+}
+
+@media (max-width: 1199.98px){
+    .section-6 .inner-wrap{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (max-width: 991.98px){
+    .section-6 .inner-wrap{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 575.98px){
+    .section-6 {
+        padding-bottom: 45px;
+    }
+    .section-6 .inner-wrap{
+        gap: 10px;
+    }
+    .section-6 .inner-button{
+        margin-top: 25px;
+    }
+    .section-6 .button-ouline{
+        padding: 10px 22px;
+        font-size: 14px;
+    }
+}
+/* Section-6 */
+
+/* Section-7 */
+
+.section-7{
+    padding-bottom: 60px;
+}
+
+.section-7 .inner-wrap{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px 20px;
+}
+
+
+.section-7 .blog-item-2{
+    grid-column: span 2;
+    grid-row: span 2;
+    box-shadow: 0px 0px 4px 0px #00000040;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: #FFF;
+}
+
+.section-7 .blog-item-2 .inner-image{
+    aspect-ratio: 536/400;
+}
+
+.section-7 .blog-item-2 .inner-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.section-7 .blog-item-2 .inner-content{
+    padding: 16px 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.section-7 .blog-item-2 .inner-content .inner-date{
+    font-weight: 300;
+    font-size: 14px;
+    color: #000;
+}
+
+.section-7 .blog-item-2 .inner-content .inner-title{
+    margin: 0;
+    font-size: 22px;
+    font-weight: 400;
+    color: var(--color-primary);
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* Thuộc tính này để thêm dấu "..." ở sau đoạn văn khi đoạn văn dài và được ẩn đi */
+    -webkit-line-clamp: 1;
+}
+
+.section-7 .blog-item-2 .inner-content .inner-desc{
+    font-size: 14px;
+    font-weight: 300;
+    color: #000;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* Thuộc tính này để thêm dấu "..." ở sau đoạn văn khi đoạn văn dài và được ẩn đi */
+    -webkit-line-clamp: 2;
+}
+
+@media (max-width: 991.98px){
+    .section-7 .inner-wrap{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .section-7 .blog-item-2{
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+}
+
+@media (max-width: 575.98px){
+    .section-7{
+        padding-bottom: 45px;
+    }
+    .section-7 .inner-wrap {
+        gap: 10px;
+    }
+    .section-7 .blog-item-2{
+        border-radius: 10px;
+    }
+    .section-7 .blog-item-2 .inner-content{
+        padding: 10px;
+    }
+    .section-7 .blog-item-2 .inner-content .inner-date{
+        font-size: 12px;
+    }
+    .section-7 .blog-item-2 .inner-content .inner-title{
+        font-size: 18px;
+    }
+}
+
+/*End-Section-7 */
+
+
+/* Blog-item */
+
+.blog-item{
+    aspect-ratio: 302/308;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.blog-item .inner-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.blog-item .inner-content{
+    position: absolute;
+    color: #DDD;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(180deg, rgba(69, 2, 199, 0) 58.85%, rgba(69, 2, 199, 0.9) 100%);
+    width: 100%;
+    height: 100%;
+    padding: 18px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.blog-item .inner-content .inner-date{
+    font-weight: 400;
+    font-size: 12px;
+    color: #FFF;
+}
+
+.blog-item .inner-content .inner-title{
+    margin: 0;
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFF;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* Thuộc tính này để thêm dấu "..." ở sau đoạn văn khi đoạn văn dài và được ẩn đi */
+    -webkit-line-clamp: 2;
+}
+
+@media (max-width: 575.98px){
+    .blog-item{
+        border-radius: 10px;
+    }
+    .blog-item .inner-content{
+        padding: 10px;
+        gap: 6px;
+    }
+    .blog-item .inner-content .inner-date{
+        font-size: 10px;
+    }
+    .blog-item .inner-content .inner-title{
+        font-size: 14px;
+    }
+}
+/* Blog-item */
