--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,10 @@ img{
 .header {
     padding: 12px 0;
     background-color: #FFF;
+    /* position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999; */
 }
 
 .header .inner-wrap {
@@ -1188,6 +1192,7 @@ img{
     border: 1px solid #99A2A5;
     padding: 0 28px;
     border-radius: 8px;
+    height: 48px;
 }
 
 .footer .inner-top .inner-form input::placeholder{
@@ -1294,4 +1299,117 @@ img{
     font-weight: 500;
     color: #667479;
 }
+
+@media (max-width: 991.98px){
+    .footer .inner-top{
+        flex-wrap: wrap;
+    }
+    .footer .inner-top .inner-title{
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+    }
+    .footer .inner-middle{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .footer .inner-bottom{
+        flex-wrap: wrap;
+    }
+
+    .footer .inner-bottom .inner-copyright, 
+    .footer .inner-bottom .inner-bottom-links{
+        width: 100%;
+    }
+
+    .footer .inner-bottom .inner-copyright{
+        order: 3;
+        text-align: center;
+    }
+
+    .footer .inner-bottom .inner-logo{
+        order: 1;
+        width: 100%;
+    }
+
+    .footer .inner-bottom .inner-logo img{
+        margin: 0 auto 20px;
+        width: 224px;
+    }
+
+    .footer .inner-bottom .inner-bottom-links{
+        order: 2;
+    }
+    .footer .inner-bottom .inner-bottom-links ul{
+        justify-content: center;
+        margin-bottom: 20px;
+        gap: 10px 25px;
+    }
+}
+
+@media (max-width: 575.98px){
+    .footer{
+        border-radius: 25px 25px 0 0;
+        padding: 40px 0;
+    }
+
+    .footer .inner-top{
+        padding: 20px;
+        gap: 20px;
+        margin-bottom: 30px;
+    }
+    .footer .inner-top .inner-form{
+        flex-wrap: wrap;
+    }
+
+    .footer .inner-top .inner-form button{
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .footer .inner-middle{
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+    }
+
+    .footer .inner-middle .inner-links ul{
+        gap: 10px 25px;
+    }
+
+    .footer .inner-middle .inner-socials ul{
+        gap: 10px 25px;
+    }
+}
 /* End-Footer */
+
+/* Box contact */
+.box-contact{
+    background-color: var(--color-primary);
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px 0px #00000026;
+    padding: 12px 10px;
+    position: fixed;
+    right: 20px;
+    bottom: 50px;
+}
+.box-contact ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px 0;
+    align-items: center;
+}
+.box-contact ul li a{
+    color: #FFF;
+    font-size: 19px;
+}
+
+@media (max-width: 575.98px){
+    .box-contact{
+        display: none;
+    }
+}
+/* Box contact */
