--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1304,6 +1304,7 @@ img{
     .footer .inner-top{
         flex-wrap: wrap;
     }
+    
     .footer .inner-top .inner-title{
         width: 100%;
         text-align: center;
@@ -1392,6 +1393,7 @@ img{
     position: fixed;
     right: 20px;
     bottom: 50px;
+    z-index: 999;
 }
 .box-contact ul{
     padding: 0;
@@ -1413,3 +1415,99 @@ img{
     }
 }
 /* Box contact */
+
+/* ------------------------------------------------------------------------------------ */
+
+/* Trang danh sách tour */
+
+/* Box-Bread-cumb */
+.box-Breadcumb{
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.box-Breadcumb .inner-image{
+    height: 253px ;
+}
+
+.box-Breadcumb .inner-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.box-Breadcumb .inner-content{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(69, 2, 199, 0.8) 100%);
+    padding-bottom: 20px;
+}
+
+.box-Breadcumb .inner-content .inner-title{
+    color: #FFF;
+    font-size: 32px;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+.box-Breadcumb .inner-content .inner-links ul{
+    list-style-type: none;
+    display: flex;
+    gap: 5px 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.box-Breadcumb .inner-content .inner-links ul a{
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFF;
+}
+
+.box-Breadcumb .inner-content .inner-links ul a i{
+    margin-left: 16px;
+    font-size: 10px;
+}
+
+@media (max-width: 991.98px){
+    .box-Breadcumb .inner-content .inner-title{
+        font-size: 20px;
+    }
+
+    .box-Breadcumb .inner-content .inner-links ul{
+        gap: 5px 10px;
+    }
+
+    .box-Breadcumb .inner-content .inner-links ul a{
+        font-size: 11px;
+    }
+    .box-Breadcumb .inner-content .inner-links ul a i{
+        margin-left: 10px;
+        font-size: 8px;
+    }
+}
+/* Box-Bread-cumb */
+
+/* Section-8*/
+.section-8{
+    padding: 60px 0;
+}
+.section-8 .inner-wrap{
+    display: flex;
+}
+
+.section-8 .inner-left{
+    width: 23.5%;
+    margin-right: 23px;
+}
+
+.section-8 .inner-right{
+    flex: 1;
+}
+/*End-Section-8*/
